# cpp-db

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: ParseAndAddCatchTests.cmake
include/: Error.h  IOManager.h  InsertStatement.h  MetaCommand.h  Row.h  SelectStatement.h  Statement.h  StatementBase.h  Table.h  Util.h
src/: Error.cpp  InsertStatement.cpp  MetaCommand.cpp  Row.cpp  SelectStatement.cpp  Statement.cpp  Table.cpp  Util.cpp  main.cpp
tests/: meta_command.cpp  test_main.cpp
